<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_trip_header"
        android:textSize="16dp" />

    <Spinner
        android:id="@+id/spin_select_destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/countries_array"
        android:prompt="@string/country_prompt" />

    <EditText
        android:id="@+id/et_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/duration_of_trip" />

    <TextView
        android:id="@+id/tv_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/currency"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/et_buget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/budget" />

</TableLayout>