<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_duration_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_destination_existing"
        android:layout_below="@+id/tv_destination_existing"
        android:text="@string/duration_existing" />

    <TextView
        android:id="@+id/tv_currency_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_duration_existing"
        android:layout_alignParentRight="true"
        android:layout_marginRight="43dp"
        android:text="@string/currency_existing" />

    <TextView
        android:id="@+id/tv_budget_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_duration_existing"
        android:layout_alignBottom="@+id/tv_duration_existing"
        android:layout_alignLeft="@+id/tv_currency_existing"
        android:layout_alignRight="@+id/tv_currency_existing"
        android:text="@string/budget_existing" />

    <TextView
        android:id="@+id/tv_destination_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/destination_existing" />

</RelativeLayout>